syntax = "proto3";

package primenumbers;

option go_package = "github.com/Kreagentle/gRPC";

message PrimeRequest {
  string number1 = 120;
}

message PrimeResponse {
  string number2 = 3;
}

service Calculator {
  rpc Calculate(PrimeRequest) returns (stream PrimeResponse);
}
